--- a/glide.yaml
+++ b/glide.yaml
@@ -3,8 +3,7 @@ import:
 - package: github.com/mitchellh/packer
   version: 0.12.0
   subpackages:
-  - common
-  - builder
+  - command
   - helper/config
   - packer
   - packer/plugin
