Encode packer version

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,14 +8,14 @@ install:
   - go get github.com/mitchellh/gox
 script:
   - ln -s ${TRAVIS_BUILD_DIR} ${GOPATH}/src/github.com/${TRAVIS_REPO_SLUG}
-  - gox -arch="amd64" -os="darwin linux windows" -output "build/{{.Dir}}-{{.OS}}-{{.Arch}}" github.com/${TRAVIS_REPO_SLUG}
+  - gox -arch="amd64" -os="darwin linux windows" -output "build/packer-${PACKER_VERSION}_{{.Dir}}_{{.OS}}_{{.Arch}}" github.com/${TRAVIS_REPO_SLUG}
 deploy:
   - provider: releases
     api_key: ${GITHUB_API_KEY}
     file:
-      - build/packer-${PACKER_VERSION}-builder-vagrant-darwin-amd64
-      - build/packer-${PACKER_VERSION}-builder-vagrant-linux-amd64
-      - build/packer-${PACKER_VERSION}-builder-vagrant-windows-amd64.exe
+      - build/packer-${PACKER_VERSION}_packer-builder-vagrant_darwin_amd64
+      - build/packer-${PACKER_VERSION}_packer-builder-vagrant_linux_amd64
+      - build/packer-${PACKER_VERSION}_packer-builder-vagrant_windows_amd64.exe
     skip_cleanup: true
     overwrite: true
     on:
