--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,9 @@ env:
   - PACKER_VERSION=0.11.0
 go:
   - 1.7
-install:
-  - go get github.com/mitchellh/gox
 script:
   - ln -s ${TRAVIS_BUILD_DIR} ${GOPATH}/src/github.com/${TRAVIS_REPO_SLUG}
-  - gox -arch="amd64" -os="darwin linux windows" -output "build/packer-${PACKER_VERSION}_{{.Dir}}_{{.OS}}_{{.Arch}}" github.com/${TRAVIS_REPO_SLUG}
+  - make dist
   - cd build
   - sha1sum packer-${PACKER_VERSION}_packer-builder-vagrant*
   - sha1sum packer-${PACKER_VERSION}_packer-builder-vagrant* > packer-${PACKER_VERSION}_packer-builder-vagrant.sha1
