--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ go:
 script:
   - ln -s ${TRAVIS_BUILD_DIR} ${GOPATH}/src/github.com/${TRAVIS_REPO_SLUG}
   - make dist
+  - mv build/packer-${PACKER_VERSION}_packer-builder-vagrant_windows_amd64{,.exe}
   - cd build
   - sha1sum packer-${PACKER_VERSION}_packer-builder-vagrant*
   - sha1sum packer-${PACKER_VERSION}_packer-builder-vagrant* > packer-${PACKER_VERSION}_packer-builder-vagrant.sha1
