--- a/.travis.yml
+++ b/.travis.yml
@@ -4,22 +4,23 @@ go:
   - 1.7
 env:
   - PACKER_VERSION=0.11.0
+  - PACKER_PLUGIN_BIN=packer-builder-vagrant
 script:
   - ln -s ${TRAVIS_BUILD_DIR} ${GOPATH}/src/github.com/${TRAVIS_REPO_SLUG}
   - make dist
-  - mv build/packer-${PACKER_VERSION}_packer-builder-vagrant_windows_amd64{,.exe}
+  - mv build/packer-${PACKER_VERSION}_${PACKER_PLUGIN_BIN}_windows_amd64{,.exe}
   - cd build
-  - sha1sum packer-${PACKER_VERSION}_packer-builder-vagrant*
-  - sha1sum packer-${PACKER_VERSION}_packer-builder-vagrant* > packer-${PACKER_VERSION}_packer-builder-vagrant.sha1
+  - sha1sum packer-${PACKER_VERSION}_${PACKER_PLUGIN_BIN}*
+  - sha1sum packer-${PACKER_VERSION}_${PACKER_PLUGIN_BIN}* > packer-${PACKER_VERSION}_${PACKER_PLUGIN_BIN}.sha1
   - cd ..
 deploy:
   - provider: releases
     api_key: ${GITHUB_API_KEY}
     file:
-      - build/packer-${PACKER_VERSION}_packer-builder-vagrant.sha1
-      - build/packer-${PACKER_VERSION}_packer-builder-vagrant_darwin_amd64
-      - build/packer-${PACKER_VERSION}_packer-builder-vagrant_linux_amd64
-      - build/packer-${PACKER_VERSION}_packer-builder-vagrant_windows_amd64.exe
+      - build/packer-${PACKER_VERSION}_${PACKER_PLUGIN_BIN}.sha1
+      - build/packer-${PACKER_VERSION}_${PACKER_PLUGIN_BIN}_darwin_amd64
+      - build/packer-${PACKER_VERSION}_${PACKER_PLUGIN_BIN}_linux_amd64
+      - build/packer-${PACKER_VERSION}_${PACKER_PLUGIN_BIN}_windows_amd64.exe
     skip_cleanup: true
     overwrite: true
     on:
