--- a/glide.yaml
+++ b/glide.yaml
@@ -1,7 +1,7 @@
 package: github.com/themalkolm/packer-builder-vagrant
 import:
 - package: github.com/blang/semver
-  version: v3.3.0
+  version: 3.3.0
 - package: github.com/koding/vagrantutil
   version: b2ce682200600ff2000bea1013ba7b965e851f87
 - package: github.com/mitchellh/packer
