--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,9 @@ script:
 deploy:
   - provider: releases
     api_key: ${GITHUB_API_KEY}
+    file_glob: true
     file:
-      - build/packer-${PACKER_VERSION}_${PACKER_PLUGIN_BIN}_darwin_amd64
-      - build/packer-${PACKER_VERSION}_${PACKER_PLUGIN_BIN}_linux_amd64
-      - build/packer-${PACKER_VERSION}_${PACKER_PLUGIN_BIN}_windows_amd64.exe
+      - build/packer-${PACKER_VERSION}_${PACKER_PLUGIN_BIN}*
     skip_cleanup: true
     overwrite: true
     on:
