--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,6 @@ sudo: false
 language: go
 go:
   - 1.8
-env:
-  - PACKER_VERSION=1.0.2 \
-    PACKER_PLUGIN_BIN=packer-builder-vagrant
 script:
   - ln -s ${TRAVIS_BUILD_DIR} ${GOPATH}/src/github.com/${TRAVIS_REPO_SLUG}
   - make dist
@@ -13,7 +10,7 @@ deploy:
     api_key: ${GITHUB_API_KEY}
     file_glob: true
     file:
-      - build/packer-${PACKER_VERSION}_${PACKER_PLUGIN_BIN}*
+      - build/packer-*
     skip_cleanup: true
     overwrite: true
     on:
